--- a/Toronto Neighbourhoods.ipynb
+++ b/Toronto Neighbourhoods.ipynb
@@ -1298,7 +1298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fetch places to eat in the neighbourhoods"
+    "Fetch nightlife spots in the neighbourhoods"
    ]
   },
   {
@@ -1610,7 +1610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Identify top 10 types of restaurants in the neighbourhoods"
+    "Identify 10 most popular types of nightlife spots in the neighbourhoods"
    ]
   },
   {
@@ -2339,7 +2339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Brewey"
+    "#### Brewery"
    ]
   },
   {
