--- a/South to North Bengaluru.ipynb
+++ b/South to North Bengaluru.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can also be extended to identify other neighbourhoods in Bengaluru that our similar to HSR Layout."
+    "This can also be extended to identify other neighbourhoods in Bengaluru that are similar to HSR Layout or to identify clusters of similar neighbourhoods. This would help those looking to move from one part of Bengaluru that they are familiar with to another, new one to shortlist localities to start their house hunting."
    ]
   },
   {
@@ -109,12 +109,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Data input required | Data source |\n",
-    "| --- | --- |\n",
-    "| Localities in Bengaluru | Makaan.com  Bengaluru rental rates page |\n",
-    "| Rental rates of localities | Makaan.com Bengaluru rental rates page |\n",
-    "| Coordinates of localities | Geocoder and Geopy |\n",
-    "| Popular spots in a locality | Foursquare API |"
+    "| Data input required | Data source | Example |\n",
+    "| --- | --- | --- |\n",
+    "| Localities in Bengaluru | Makaan.com  Bengaluru rental rates page | HSR Layout, Malleshwaram, Kalyan Nagar |\n",
+    "| Rental rates of localities | Makaan.com Bengaluru rental rates page | Average rental rates for 2BHK in th localities |\n",
+    "| Coordinates of localities | Geocoder and Geopy | Latitude and longitudes of the localities |\n",
+    "| Popular spots in a locality | Foursquare API | Restaurants, entertainment centers, bars |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The details of the localities and the average property rental rates in Bengaluru to be considered will be fetched from this Makaan.com page: https://www.makaan.com/price-trends/property-rates-for-rent-in-bangalore?page=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A sample page of data is presented below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Bengaluru_localities_makaandotcom.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of this, only the average rental rates of 2BHK will considered. Also, data from the first 10 pages of results will be considered as the data quality has been observed to drop after that."
    ]
   }
  ],
