Update South to North Bengaluru_report.ipynb

--- a/South to North Bengaluru_report.ipynb
+++ b/South to North Bengaluru_report.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> South to North Bengaluru </center>"
+    "# South to North Bengaluru"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center> Sadhana Rajendran </center>"
+    "## Sadhana Rajendran"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center> 17th April, 2020 </center>"
+    "## 17th April, 2020"
    ]
   },
   {
