--- a/South to North Bengaluru_report.ipynb
+++ b/South to North Bengaluru_report.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# South to North Bengaluru"
+    "<h1><center> South to North Bengaluru </center></h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sadhana Rajendran"
+    "<h2><center> Sadhana Rajendran </center></h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 17th April, 2020"
+    "<h2><center> 17th April, 2020 </center></h2>"
    ]
   },
   {
