Update South to North Bengaluru_report.ipynb

--- a/South to North Bengaluru_report.ipynb
+++ b/South to North Bengaluru_report.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center> South to North Bengaluru </center></h1>"
+    "# South to North Bengaluru "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><center> Sadhana Rajendran </center></h2>"
+    "## Sadhana Rajendran "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><center> 17th April, 2020 </center></h2>"
+    "## 17th April, 2020 "
    ]
   },
   {
